--- a/reg.html
+++ b/reg.html
@@ -3,85 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validation Example</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            padding: 20px;
-        }
-
-        .form-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: 0 auto;
-        }
-
-        input[type=text], input[type=email], input[type=password], select {
-            width: 100%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-
-        input[type=submit] {
-            background-color: burlywood;
-            color: white;
-            padding: 14px 20px;
-            margin: 8px 0;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-        }
-
-        input[type=submit]:hover {
-            background-color: blue;
-        }
-
-        .error {
-            color: red;
-            font-size: 0.9em;
-        }
-    </style>
+    <title>Student Registration Form</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <div class="form-container">
-        <h2 style="color: coral;">Registration Form</h2>
+    <div class="container">
+        <h2>Student Registration Form</h2>
         <form id="registrationForm">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br>
-            <span class="error" id="nameError"></span><br>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <span class="error" id="usernameError"></span>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <span class="error" id="emailError"></span><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <span class="error" id="emailError"></span>
 
-            <label for="contact">Phone No:</label><br>
-            <input type="text" id="contact" name="contact" required><br>
-            <span class="error" id="phonenoerror"></span><br>
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" required>
+            <span class="error" id="phoneError"></span>
 
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <span class="error" id="passwordError"></span><br>
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob" required>
+            <span class="error" id="dobError"></span>
 
-            <label for="category">Category:</label><br>
-            <select id="category" name="category" required>
-                <option value="">Select a category</option>
-                <option value="student">Student</option>
-                <option value="professional">Professional</option>
-                <option value="other">Other</option>
-            </select><br>
-            <span class="error" id="categoryError"></span><br>
+            <label>Gender:</label>
+            <label><input type="radio" name="gender" value="male" required> Male</label>
+            <label><input type="radio" name="gender" value="female"> Female</label>
+            <label><input type="radio" name="gender" value="other"> Other</label>
+            <span class="error" id="genderError"></span>
 
-            <input type="submit" value="Submit">
+            <label for="address">Address:</label>
+            <textarea id="address" name="address" rows="4" required></textarea>
+            <span class="error" id="addressError"></span>
+
+            <label for="course">Course of Study:</label>
+            <select id="course" name="course" required>
+                <option value="">Select a course</option>
+                <option value="computer_science">Computer Science</option>
+                <option value="business_administration">Business Administration</option>
+                <option value="engineering">Engineering</option>
+                <option value="arts">Arts</option>
+            </select>
+            <span class="error" id="courseError"></span>
+
+            <label>
+                <input type="checkbox" id="terms" name="terms" required> I agree to the terms and conditions
+            </label>
+            <span class="error" id="termsError"></span>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <span class="error" id="passwordError"></span>
+
+            <label for="confirmPassword">Confirm Password:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required>
+            <span class="error" id="confirmPasswordError"></span>
+
+            <button type="submit">Register</button>
         </form>
     </div>
 
